<resources>
    <string name="app_name">Abren</string>
    <string name="action_settings">Settings</string>

    <string name="mapbox_access_token">pk.eyJ1IjoiZW1uZXRtZXNmaW4iLCJhIjoiY2tydWN0aTYyMTB6MjJvbnBxYmt1MG5yYyJ9.PIgeOTb2EbdVxIXw-gVmJw</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->


    <!-- auth_fragment -->
    <string name="abren">Abren</string>
    <string name="send_authorization_code">Send Authorization Code</string>
    <string name="new_to_abren">New to Abren?</string>
    <string name="Register">Register</string>

    <!-- Strings for register_fragment (role selection)-->
    <string name="register_to">Register to:</string>
    <string name="give_rides">Give Ride</string>
    <string name="or">or</string>
    <string name="receive_rides">Receive Ride</string>
    <string name="reg_info">If you own a vehicle, register to \'Give Rides\'
        to both give and receive rides.</string>
    <string name="info_icon">Info icon</string>

    <!-- phone_no_fragment-->
    <string name="enter_otp">Enter OTP</string>
    <string name="submit_button">Submit</string>
    <string name="try_again">Please try again if you havent received sms notification</string>

    <!-- Strings for register_form1_fragment-->
    <string name="profile_picture">Profile Picture</string>
    <string name="personal_information">Personal Information</string>
    <string name="eth_country_code">+251</string>
    <string name="phone_number">Phone Number</string>
    <string name="Select_kebele_id_image">Select Image of Kebele Id</string>
    <string name="Select_kebele_id_back_image">Select Back Image of Kebele Id</string>
    <string name="no_image_selected">No Image Selected</string>
    <string name="Emergency_info_text_view">Emergency Contact Information</string>
    <string name="back">Back</string>
    <string name="Continue">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings for register_form2_fragment-->
    <string name="vehicle_info">Vehicle Information</string>
    <string name="select_image_driver_license">Select Image of Drivers License</string>
    <string name="select_vehicle_ownership">Select Image of Vehicle Ownership Document</string>
    <string name="select_vehicle_insurance_doc">Select Image of Vehicle Insurance Document</string>
    <string name="licence_plate_number">License Plate Number</string>
    <string name="vehicle_year">Vehicle Year</string>
    <string name="vehicle_make">Vehicle Make</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="select_vehicle_image">Select Image of Vehicle</string>


    <!-- Strings for preferences_form_fragment-->
    <string name="preferences">Preferences</string>
    <string name="Select_types_of_people">Select the types of people you want to give rides to</string>
    <string name="age_group1">Age Group\n18 – 25</string>
    <string name="age_group2">Age Group\n25 – 40</string>
    <string name="age_group3">Age Group\n40 – 50</string>
    <string name="age_group4">Age Group\n> 60</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="finish">finish</string>
    <string name="change_preference_anytime">You can change your preference at anytime</string>
    <string name="title_activity_rider_routes_home">RiderRoutesHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_nearbyDrivers">Nearby Drivers</string>
    <string name="menu_profile">Profile</string>

    <!--  Strings for Rider home fragment -->
    <string name="wheretogo">Where do you want to go?</string>
    <string name="select_destination">Select Destination</string>
    <string name="recent_destinations">Recent Destinations</string>
    <string name="place_name">Place Name</string>
    <string name="last_traveled">Last Traveled on June 20,2021</string>

    <!-- strings for mapbox -->
    <string name="start_navigation">Start Navigation</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You "didn't" grant location permissions.</string>

    <!--Strings for Profile_fragment-->

    <string name="rating"> Rating </string>
    <string name="accept">Accept</string>
    <string name="title_activity_rider_requests">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_requests">Requests</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="waiting">Waiting</string>

    <!--Strings for Shared preferenece-->
    <string name="location">location</string>
</resources>
