<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginEnd="10dp"
    tools:context=".RegisterFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/register_to"/>

    <Button
        android:id="@+id/give_ride_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/App_Button"
        android:text="@string/give_rides" />

    <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:text="@string/or"/>

    <Button
        android:id="@+id/receive_ride_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/App_Button"
        android:text="@string/receive_rides" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
            android:id="@+id/imageView"
            android:layout_width="17dp"
            android:layout_height="18dp"
            android:contentDescription="@string/info_icon"
            android:src="@drawable/ic_info"
            tools:layout_editor_absoluteY="507dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginLeft="5dp"
            android:text="@string/reg_info"
            android:layout_marginStart="5dp" />
    </LinearLayout>

</LinearLayout>