<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="15dp"
    android:layout_gravity="center"
    tools:context=".RegisterForm1Fragment">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/App_TextView.Title"
            android:textSize="70sp"
            android:layout_marginBottom="60dp"
            android:layout_gravity="center"
            android:textColor="@color/orange"
            android:text="@string/abren" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eth_country_code"
                android:layout_marginRight="@dimen/middle_space"
                android:background="@drawable/rounded_edittext"
                style="@style/App_TextView" />

            <EditText
                android:id="@+id/phone_number_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/phone_number"
                style="@style/App_EditText" />
        </LinearLayout>

        <Button
            android:id="@+id/send_authorization_code_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/App_Button"
            android:layout_marginBottom="30dp"
            android:text="@string/send_authorization_code" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/app_margin"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:text="@string/new_to_abren"/>

        <Button
            android:id="@+id/register_button_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/App_Button"
            android:textColor="@color/orange"
            android:background="@color/white"
            android:text="@string/Register" />

</LinearLayout>