<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">


    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.abren.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_nearbyDrivers" />
    </fragment>

    <fragment
        android:id="@+id/nav_nearbyDrivers"
        android:name="com.example.abren.NearbyDriversFragment"
        android:label="@string/menu_nearbyDrivers"
        tools:layout="@layout/fragment_nearby_drivers" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.abren.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>