<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".RegisterForm1Fragment">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/dark"
                android:layout_marginBottom="10dp"
                android:text="@string/vehicle_info" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="15sp"
                android:drawablePadding="15dp"
                android:drawableLeft="@drawable/ic_camera"
                android:hint="@string/select_image_driver_license"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_camera" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="15sp"
                android:drawablePadding="15dp"
                android:drawableLeft="@drawable/ic_camera"
                android:hint="@string/select_image_driver_license"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_camera" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="15sp"
                android:drawablePadding="15dp"
                android:drawableLeft="@drawable/ic_camera"
                android:hint="@string/select_vehicle_image"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_camera" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="15sp"
                android:hint="@string/licence_plate_number"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="15sp"
                android:hint="@string/vehicle_year"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="15sp"
                android:hint="@string/vehicle_make"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="15sp"
                android:hint="@string/vehicle_model"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="15sp"
                android:drawablePadding="15dp"
                android:drawableLeft="@drawable/ic_camera"
                android:hint="@string/select_vehicle_image"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_camera" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/back_button2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="3dp"
                    android:textAlignment="viewStart"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:paddingRight="10dp"
                    android:layout_gravity="start"
                    android:drawablePadding="15dp"
                    android:textSize="12sp"
                    android:background="@drawable/round_orange"
                    android:text="@string/back"
                    android:textColor="@color/white"
                    android:drawableLeft="@drawable/ic_back"
                    android:drawableStart="@drawable/ic_back"
                    android:layout_marginEnd="3dp" />

                <Button
                    android:id="@+id/continue_button2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_orange"
                    android:text="@string/Continue"
                    android:drawablePadding="15dp"
                    android:textAlignment="textEnd"
                    android:paddingRight="10dp"
                    android:paddingEnd="10dp"
                    android:paddingLeft="10dp"
                    android:layout_gravity="end"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:drawableRight="@drawable/ic_continue"
                    android:drawableEnd="@drawable/ic_continue"/>

            </LinearLayout>
    </LinearLayout>
</ScrollView>

