<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_margin="15dp"
    tools:context=".Otp">

    <TextView
        android:id="@+id/enter_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_title"
        style="@style/App_TextView.Title"
        android:text="@string/enter_otp" />



    <EditText
        android:id="@+id/otp_val"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/App_EditText"
        android:layout_marginBottom="35dp"
        android:hint="@string/enter_otp"
        android:background="@drawable/rounded_edittext" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        style="@style/App_Button"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_small"
        android:fontFamily="sans-serif-black"
        android:drawableLeft="@drawable/ic_info"
        android:drawableStart="@drawable/ic_info"
        android:drawablePadding="@dimen/middle_space"
        android:textColor="@color/gray"
        android:text="@string/try_again" />

</LinearLayout>
