<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".PhoneNumberFragment">

    <TextView
        android:id="@+id/enter_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/dark"
        android:layout_marginBottom="15dp"
        android:text="@string/enter_otp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="15sp"
        android:drawablePadding="30dp"

        android:hint="@string/enter_otp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/rounded_edittext"
         />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submit_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/round_orange"
            android:text="@string/submit_button"
            android:drawablePadding="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:layout_gravity="end"
            android:textSize="12sp"
            android:textColor="@color/white"
         />

    </LinearLayout>
    <TextView
        android:id="@+id/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:fontFamily="sans-serif-black"
        android:paddingTop="10dp"
        android:textColor="@color/gray"
        android:layout_marginBottom="15dp"
        android:text="@string/try_again" />

</LinearLayout>