<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".RegisterForm1Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/middle_space"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="42dp" />

        <TextView
            style="@style/App_TextView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="100dp"
            android:text="@string/wheretogo"
            android:textSize="40sp" />

        <AutoCompleteTextView
            android:id="@+id/select_destination_text"
            style="@style/App_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Destination"
            android:shadowColor="#CCCCCC"
            android:shadowDx="100"
            android:shadowDy="100" />

        <Button
            android:id="@+id/go_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Go" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="29dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/App_TextView.Title"
            android:text="@string/recent_destinations" />

        <androidx.cardview.widget.CardView
            android:id="@+id/recent_destinations_cardView"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/middle_space"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/app_padding"
                android:background="@drawable/rounded_edittext"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/destination_name_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:text="@string/place_name" />

                <TextView
                    android:id="@+id/last_traveled_textview"
                    android:layout_width="match_parent"
                    android:drawableRight="@drawable/ic_continue_darker"
                    android:layout_height="wrap_content"
                    android:text="@string/last_traveled" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/recent_destinations_cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/middle_space">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/app_padding"
                android:background="@drawable/rounded_edittext"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/destination_name_text_view2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:text="@string/place_name" />

                <TextView
                    android:id="@+id/last_traveled_textview2"
                    android:layout_width="match_parent"
                    android:drawableRight="@drawable/ic_continue_darker"
                    android:layout_height="wrap_content"
                    android:text="@string/last_traveled" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</ScrollView>